[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = {version = "1.25.0", features = ["full"] }
actix-web = "4"
tokio-stream = { version = "0.1.12", features = ["sync"] }
actix-web-lab = "0.19.1"
