[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = {version = "1.25.0", features = ["full"] }
actix-web = "4"
tokio-stream = { version = "0.1.12", features = ["sync"] }
actix-cors = "0.6.4"
actix-web-actors = "4.2.0"
actix = "0.13.0"
env_logger = "0.10.0"
log = "0.4.17"
